[gd_scene load_steps=30 format=2]

[ext_resource path="res://tutorial_assets/UI/PNG/grey_button10.png" type="Texture" id=1]
[ext_resource path="res://towerDefense_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://tutorial_assets/UI/PNG/blue_button12.png" type="Texture" id=3]
[ext_resource path="res://src/scripts/GameScene.gd" type="Script" id=4]
[ext_resource path="res://src/scripts/UserInterface.gd" type="Script" id=5]
[ext_resource path="res://health_bar_progress.png" type="Texture" id=6]
[ext_resource path="res://health_bar_border.png" type="Texture" id=7]
[ext_resource path="res://src/scenes/fonts/narrow_40_outline1.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/scripts/build_missile.gd" type="Script" id=9]
[ext_resource path="res://src/scripts/build_gun.gd" type="Script" id=10]
[ext_resource path="res://src/scripts/build_minigun.gd" type="Script" id=11]
[ext_resource path="res://Gun spaceBuilding_019.png" type="Texture" id=12]
[ext_resource path="res://glitch_vhs_gif.png" type="Texture" id=13]
[ext_resource path="res://clock_sprite.png" type="Texture" id=14]
[ext_resource path="res://src/scenes/Camera2D.gd" type="Script" id=15]
[ext_resource path="res://tutorial_assets/UI/PNG/grey_arrowUpWhite.png" type="Texture" id=16]
[ext_resource path="res://tutorial_assets/UI/PNG/red_cross.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 540, 396 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 540, 0, 540, 396 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1080, 0, 540, 396 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 396, 540, 396 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 540, 396, 540, 396 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1080, 396, 540, 396 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 792, 540, 396 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 540, 792, 540, 396 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1080, 792, 540, 396 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 1188, 540, 396 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 960, 22.5 )

[node name="GameScene" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="UserInterface" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="PauseEffect" type="AnimatedSprite" parent="UserInterface"]
visible = false
self_modulate = Color( 100, 100, 100, 0.01 )
position = Vector2( -4, -6.75 )
scale = Vector2( 3.64444, 2.84722 )
frames = SubResource( 11 )
frame = 7
speed_scale = 1.25
playing = true
centered = false

[node name="HeadsUpDisplay" type="Control" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildPanel" type="Panel" parent="UserInterface/HeadsUpDisplay"]
self_modulate = Color( 1, 1, 1, 0.462745 )
margin_left = 770.0
margin_top = 891.0
margin_right = 1147.0
margin_bottom = 1030.0

[node name="HBox_BuildMenu" type="HBoxContainer" parent="UserInterface/HeadsUpDisplay/BuildPanel"]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -199.5
margin_top = -90.05
margin_right = 200.5
margin_bottom = -10.05
rect_min_size = Vector2( 400, 80 )
custom_constants/separation = 30
alignment = 1

[node name="Cannon" type="TextureButton" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu" groups=["build_buttons"]]
margin_left = 50.0
margin_right = 130.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 1 )
expand = true
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Cannon"]
texture = ExtResource( 2 )
offset = Vector2( 40, 40 )
region_enabled = true
region_rect = Rect2( 1215, 640.822, 65, 65 )

[node name="Label" type="Label" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Cannon"]
margin_left = -3.0
margin_top = -30.0
margin_right = 37.0
margin_bottom = -16.0
rect_scale = Vector2( 2.5, 2.5 )
text = "$150"

[node name="Missile" type="TextureButton" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu" groups=["build_buttons"]]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 198, -232 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 1 )
expand = true
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Missile"]
texture = ExtResource( 2 )
offset = Vector2( 40, 40 )
region_enabled = true
region_rect = Rect2( 1345, 640.822, 65, 65 )

[node name="Label" type="Label" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Missile"]
margin_left = -3.0
margin_top = -31.0
margin_right = 37.0
margin_bottom = -17.0
rect_scale = Vector2( 2.5, 2.5 )
text = "$150"

[node name="Minigun" type="TextureButton" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu" groups=["build_buttons"]]
margin_left = 270.0
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 1 )
expand = true
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Minigun"]
modulate = Color( 0.698039, 0.698039, 0.698039, 1 )
position = Vector2( -15, -8 )
scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 12 )
offset = Vector2( 40, 40 )
region_rect = Rect2( 1345, 640.822, 65, 65 )

[node name="Label" type="Label" parent="UserInterface/HeadsUpDisplay/BuildPanel/HBox_BuildMenu/Minigun"]
margin_left = -2.0
margin_top = -30.0
margin_right = 38.0
margin_bottom = -16.0
rect_scale = Vector2( 2.5, 2.5 )
text = "$175"

[node name="SelectPanel" type="Panel" parent="UserInterface/HeadsUpDisplay"]
visible = false
self_modulate = Color( 1, 1, 1, 0.462745 )
show_behind_parent = true
margin_left = 689.0
margin_top = 714.0
margin_right = 1231.0
margin_bottom = 853.0

[node name="HBox_SelectInteract" type="HBoxContainer" parent="UserInterface/HeadsUpDisplay/SelectPanel"]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -232.0
margin_top = -93.05
margin_right = -42.0
margin_bottom = -13.05
custom_constants/separation = 30
alignment = 1

[node name="Sell" type="TextureButton" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Sell"]
position = Vector2( 41, 39 )
scale = Vector2( 3, 3 )
texture = ExtResource( 17 )
region_rect = Rect2( 1345, 640.822, 65, 65 )

[node name="Label" type="Label" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Sell"]
margin_left = -2.0
margin_top = -30.0
margin_right = 38.0
margin_bottom = -16.0
rect_scale = Vector2( 2.5, 2.5 )
text = "$175"

[node name="Upgrade" type="TextureButton" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 1 )
expand = true
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Upgrade"]
position = Vector2( -116, -116 )
scale = Vector2( 3.9, 3.9 )
texture = ExtResource( 16 )
offset = Vector2( 40, 40 )
region_rect = Rect2( 1345, 640.822, 65, 65 )

[node name="Label" type="Label" parent="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Upgrade"]
margin_left = -2.0
margin_top = -30.0
margin_right = 38.0
margin_bottom = -16.0
rect_scale = Vector2( 2.5, 2.5 )
text = "$175"

[node name="RichTextLabel" type="RichTextLabel" parent="UserInterface/HeadsUpDisplay/SelectPanel"]
margin_left = 280.0
margin_top = 58.0
margin_right = 330.0
margin_bottom = 73.0
rect_min_size = Vector2( 50, 0 )
rect_scale = Vector2( 2, 2 )
rect_clip_content = false
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Target"
fit_content_height = true
scroll_active = false

[node name="TargetOption" type="OptionButton" parent="UserInterface/HeadsUpDisplay/SelectPanel"]
margin_left = 380.0
margin_top = 54.0
margin_right = 437.0
margin_bottom = 74.0
rect_scale = Vector2( 2, 2 )
text = "First"
align = 2
items = [ "First", null, false, 0, null, "Last", null, false, 1, null, "Strong", null, false, 2, null, "Weak", null, false, 3, null, "Fast", null, false, 4, null, "Slow", null, false, 5, null, "Dropship", null, false, 6, null ]
selected = 0

[node name="HealthBar" type="TextureProgress" parent="UserInterface"]
margin_left = 1386.0
margin_top = 10.0
margin_right = 2431.0
margin_bottom = 227.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 30.0
value = 30.0
allow_lesser = true
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
texture_progress_offset = Vector2( 3, 0 )

[node name="GoldCounter" type="RichTextLabel" parent="UserInterface"]
margin_left = 1595.0
margin_top = 119.0
margin_right = 1916.0
margin_bottom = 199.0
custom_fonts/normal_font = ExtResource( 8 )
text = "400"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemainingEnemies" type="RichTextLabel" parent="UserInterface"]
visible = false
margin_left = 1754.0
margin_top = 193.0
margin_right = 2075.0
margin_bottom = 273.0
custom_fonts/normal_font = ExtResource( 8 )
text = "400"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBar" type="TextureProgress" parent="UserInterface"]
self_modulate = Color( 0.09, 0.53, 46.03, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -322.0
margin_right = 723.0
margin_bottom = 227.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
max_value = 30.0
step = 0.5
value = 30.0
allow_lesser = true
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
texture_progress_offset = Vector2( 42, 0 )

[node name="ClockSprite" type="Sprite" parent="UserInterface/TimeBar"]
position = Vector2( 106, 110 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 14 )

[node name="UpArea" type="Area2D" parent="UserInterface"]
visible = false
position = Vector2( -1, -35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UserInterface/UpArea"]
position = Vector2( 961, 58 )
z_index = 10
shape = SubResource( 12 )

[node name="DownArea" type="Area2D" parent="UserInterface"]
visible = false
position = Vector2( -7, 965 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UserInterface/DownArea"]
position = Vector2( 965, 95.5 )
z_index = 10
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 15 )

[connection signal="pressed" from="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Sell" to="." method="_on_Sell_pressed"]
[connection signal="pressed" from="UserInterface/HeadsUpDisplay/SelectPanel/HBox_SelectInteract/Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="item_selected" from="UserInterface/HeadsUpDisplay/SelectPanel/TargetOption" to="." method="_on_TargetOption_item_selected"]
[connection signal="mouse_entered" from="UserInterface/UpArea" to="." method="_on_UpArea_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/UpArea" to="." method="_on_UpArea_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/DownArea" to="." method="_on_DownArea_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/DownArea" to="." method="_on_DownArea_mouse_exited"]
